--- a/ESCAPE9/pom.xml
+++ b/ESCAPE9/pom.xml
@@ -14,7 +14,9 @@
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 	</properties>
 	<dependencies>
-	<!-- DataSource library -->
+	
+	<!-- ojdbc driver -->
+
 		<dependency>
 			<groupId>c3p0</groupId>
 			<artifactId>c3p0</artifactId>
